--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
-DATABASE_URL="mysql://usuario:senha@localhost:3306/api_teste"
+ENV="development"
 JWT_SECRET="secret"
+
+DB_HOST="host"
+DB_PORT="porta"
+DB_USERNAME="user"
+DB_PASSWORD="password"
+DB_DATABASE="database"
