--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\"",
     "start": "nest start",
     "dev": "nest start --watch",
     "debug": "nest start --debug --watch",
-    "prod": "node dist/main",
+    "prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "typeorm": "node -r ts-node/register -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "migrate:create": "npm run typeorm -- migration:create ./typeorm/migrations/Migrate",
     "migrate:up": "npm run typeorm -- migration:run -d ./typeorm/data-source.ts",
-    "migrate:down": "npm run typeorm -- migration:revert -d ./typeorm/data-source.ts"
+    "migrate:down": "npm run typeorm -- migration:revert -d ./typeorm/data-source.ts",
+    "preprod": "npm run format && npm run lint && npm run build"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
